# sso_string

./: .gitignore  Changelog.md  README.md  main.c  meson.build  meson_options.txt  prc_string.h  string_append_cstr.md  string_append_cstr_part.md  string_append_part_cstr.md  string_append_part_string.md  string_append_string.md  string_append_string_part.md  string_capacity.md  string_clear.md  string_compare_cstr.md  string_compare_string.md  string_copy.md  string_copy_to.md  string_create.md  string_create_ref.md  string_cstr.md  string_data.md  string_empty.md  string_ends_with_cstr.md  string_ends_with_string.md  string_equals_cstr.md  string_equals_string.md  string_erase.md  string_file_read_all.md  string_file_read_line.md  string_find_cstr.md  string_find_part_cstr.md  string_find_part_string.md  string_find_string.md  string_format_args_cstr.md  string_format_args_string.md  string_format_cstr.md  string_format_string.md  string_format_time_cstr.md  (+71 more)
examples/: meson.build  playground.c  string_docs_parser.c  test.txt
include/: sso_string.h
src/: sso_string.c
tests/: meson.build  new_tests.c  test_macros.h  tests.c
